--- a/atlas/envs/required_packages.yaml
+++ b/atlas/envs/required_packages.yaml
@@ -3,14 +3,9 @@ channels:
     - bioconda
     - defaults
 dependencies:
-    - python=3.6
-    - bbmap=37.*
+    - python=3.7
+    - bbmap=38
     - pigz
     - bzip2=1.0.*
-#    - diamond=0.9.10
-    - pandas=0.20.3
-#    - picard=2.9.0
-#    - pyyaml=3.12
+    - pandas=1.2
     - samtools=1.3.1
-#    - sqlite=3.13.0
-#    - subread=1.5.3
