--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -136,12 +136,23 @@ jobs:
           name: test assembly
           command: |
               source activate ./atlasenv
-              .test/test_assembly.sh --resources mem=$MEM java_mem=$MEM --jobs=$N_THREADS --restart-times=2 --omit-from build_qc_report build_assembly_report
-      # - store_test_results:
-      #     path: .test/Test_assembly/reports
-      # - store_artifacts:
-      #     path: .test/Test_assembly/reports
-      #     destination: assembly_results
+              .test/test_assembly.sh --resources mem=$MEM java_mem=$MEM --config  threads=$N_THREADS mem=$MEM --jobs=$N_THREADS --restart-times=2 --omit-from build_qc_report build_assembly_report
+      - run:
+          command: |
+            mkdir -p /tmp/logs
+            cp -r .test/Test_assembly/Streptococcus/logs /tmp/logs/Streptococcus
+            cp -r .test/Test_assembly/Mycoplasma/logs /tmp/logs/Mycoplasma
+            cp -r .test/Test_assembly/logs /tmp/logs/global
+          when: on_fail
+      - store_artifacts:
+          path: /tmp/logs
+          destination: assembly_logs
+      - store_test_results:
+          path: .test/Test_assembly/reports
+      - store_artifacts:
+          path: .test/Test_assembly/reports
+          destination: assembly_results
+
 
       - run:
           name: run genecatalog
