--- a/atlasenv.yml
+++ b/atlasenv.yml
@@ -6,8 +6,8 @@ dependencies:
   - python=3.7
   - mamba
   - bbmap
-  - snakemake=6.1
-  - pandas>1 
+  - snakemake>=6.1
+  - pandas>1
   - click=7
   - ruamel.yaml=0.15.99 # needs to be explicit
   - biopython=1.74
