--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,6 +139,8 @@ jobs:
               .test/test_assembly.sh --resources mem=$MEM java_mem=$MEM --jobs=$N_THREADS --restart-times=2 --omit-from build_qc_report build_assembly_report
       - store_test_results:
          path: .test/Test_assembly/log
+      - store_test_results:
+         path: .test/Test_assembly/logs
       # - store_artifacts:
       #     path: .test/Test_assembly/reports
       #     destination: assembly_results
