--- a/atlas/Snakefile
+++ b/atlas/Snakefile
@@ -361,21 +361,10 @@ onerror:
 for r in workflow.rules:
     if not "mem" in r.resources:
         r.resources["mem"] = config["mem"]
+    r.resources["mem_mb"] = r.resources["mem"]*1000
+
     if not "time" in r.resources:
         if r.resources["mem"] == config["simplejob_mem"]:
             r.resources["time"] = config["runtime"]["simple_job"]
         else:
             r.resources["time"] = config["runtime"]["default"]
-#
-# # elif config.get("workflow") == "annotate":
-# #     localrules: annotate
-# #     rule annotate:
-# #         input:
-# #             expand("{sample}_annotations.txt", sample=SAMPLES),
-# #             expand("{sample}/contig_stats.txt", sample=SAMPLES),
-# #             #"reports/assembly_report.html" # not tested yet, but should work
-# #
-# #     include: "rules/annotate.smk"
-#
-# else:
-#     raise Exception("Workflow %s is not a defined workflow." % config.get("workflow", "[no --workflow specified]"))
