add matplotlib for error in get_Bins

--- a/atlas/envs/sequence_utils.yaml
+++ b/atlas/envs/sequence_utils.yaml
@@ -3,5 +3,6 @@ channels:
     - bioconda
     - defaults
 dependencies:
-    - biopython=1.70
-    - pandas=0.20.1
+    - biopython=1.74
+    - pandas=1.2
+    - matplotlib-base
