--- a/atlas/envs/report.yaml
+++ b/atlas/envs/report.yaml
@@ -3,10 +3,9 @@ channels:
     - bioconda
     - defaults
 dependencies:
-    - python=3.7
+    - python=3.8
     - docutils
     - pandas=1.2
-    - plotly=4.14
+    - plotly=5.3
     - ipython
-    - seaborn=0.11
-    - snakemake=6.0
+    - snakemake-minimal=6.7
