--- a/atlasenv.yml
+++ b/atlasenv.yml
@@ -6,7 +6,10 @@ dependencies:
   - python=3.8
   - mamba
   - bbmap=38
-  - snakemake=6.7
+  - snakemake-minimal=6.7
+  - pygments
+  - networkx
+  - graphviz
   - pandas=1.2
   - click=7
   - ruamel.yaml=0.17
