add vamb that does not yet exits #446

--- a/atlas/envs/vamb.yaml
+++ b/atlas/envs/vamb.yaml
@@ -4,10 +4,4 @@ channels:
     - pytorch
     - defaults
 dependencies:
-    - pytorch
-    - pip
-    - torchvision
-    - cudatoolkit=10.2
-    - pysam
-    - pip:
-       - git+https://github.com/RasmussenLab/vamb@v3.0.3
+    - vamb>=3.0.3,<3.1
