--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -115,12 +115,14 @@ spades_extra: ""
 longread_type: none # [none,"pacbio", "nanopore", "sanger", "trusted-contigs", "untrusted-contigs"]
 # Preprocessed long reads can be defined in the sample table with 'longreads' , for more info see the spades manual
 
+
+prefilter_minimum_contig_length: 1000
+
 # Filtering
 #------------
 # filter out assembled noise
 # this is more important for assemblys from megahit
-filter_contigs: true
-prefilter_minimum_contig_length: 300
+filter_contigs: false
 # trim contig tips
 contig_trim_bp: 0
 # require contigs to have read support
@@ -128,7 +130,7 @@ minimum_average_coverage: 1
 minimum_percent_covered_bases: 20
 minimum_mapped_reads: 0
 # after filtering
-minimum_contig_length: 500
+minimum_contig_length: 1000
 
 
 ########################
