Revert "add vamb that does not yet exits #446"
This reverts commit 8c488b8ed9f78ef05afdeb0affc1be02681fe1ed.

--- a/atlas/envs/vamb.yaml
+++ b/atlas/envs/vamb.yaml
@@ -4,4 +4,10 @@ channels:
     - pytorch
     - defaults
 dependencies:
-    - vamb>=3.0.3,<3.1
+    - pytorch
+    - pip
+    - torchvision
+    - cudatoolkit=10.2
+    - pysam
+    - pip:
+       - git+https://github.com/RasmussenLab/vamb@v3.0.3
