go bakc to vamb3.0.1

--- a/atlas/envs/vamb.yaml
+++ b/atlas/envs/vamb.yaml
@@ -4,11 +4,4 @@ channels:
     - pytorch
     - defaults
 dependencies:
-    - python=3.7 # vamb  3.0.1 needs python3.7 I don't know about vamb 3.0.3
-    - pytorch
-    - pip
-    - torchvision
-    - cudatoolkit=10.2
-    - pysam
-    - pip:
-       - git+https://github.com/RasmussenLab/vamb@v3.0.3
+  - vamb>=3.0
