--- a/atlas/envs/required_packages.yaml
+++ b/atlas/envs/required_packages.yaml
@@ -4,7 +4,7 @@ channels:
     - defaults
 dependencies:
     - python=3.8
-    - bbmap=38
+    - bbmap=37 # 38.93 has error in minid
     - pigz
     - bzip2=1.0
     - pandas=1.2
