--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -175,7 +175,7 @@ DASTool:
   score_threshold: 0.5              #Score threshold until selection algorithm will keep selecting bins [0..1].
 
 genome_dereplication:
-  ANI: 0.95
+  ANI: 0.975                        ## Genome dreplication threshold
   overlap: 0.6
   opt_parameters: ""
   filter:
