--- a/setup.cfg
+++ b/setup.cfg
@@ -2,5 +2,5 @@
 VCS = git
 style = pep440
 versionfile_source = atlas/_version.py
-versionfile_build = metagenome-atlas/_version.py
+versionfile_build = atlas/_version.py
 tag_prefix = v
