instrain initial commit

--- a/atlas/workflow/Snakefile
+++ b/atlas/workflow/Snakefile
@@ -224,6 +224,7 @@ include: "rules/sra.smk"
 include: "rules/gtdbtk.smk"
 include: "rules/cobinning.smk"
 include: "rules/dram.smk"
+include: "rules/strains.smk"
 
 
 CONDAENV = "envs"  # overwrite definition in download.smk
@@ -296,6 +297,7 @@ rule genomes:
         "genomes/counts/raw_counts_genomes.tsv",
         "genomes/clustering/allbins2genome.tsv",
         * get_genome_annotations(),
+        rules.strains.input,
         "finished_binning",
     output:
         temp(touch("finished_genomes")),
