spades can work with py 10

--- a/atlas/workflow/envs/spades.yaml
+++ b/atlas/workflow/envs/spades.yaml
@@ -3,5 +3,4 @@ channels:
     - bioconda
     - defaults
 dependencies:
-    - python=3.8 # spades doesn't support yet py 3.10 https://github.com/ablab/spades/issues/863
-    - spades=3
+    - spades>=3.15.3
