--- a/atlasenv.yml
+++ b/atlasenv.yml
@@ -3,7 +3,7 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - python=3.8
+  - python>=3.8
   - mamba
   - bbmap=38
   - snakemake-minimal=6.7
