--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -176,7 +176,7 @@ DASTool:
 
 genome_dereplication:
   ANI: 0.975                        ## Genome dreplication threshold
-  overlap: 0.6
+  overlap: 0.2                      ## more info https://drep.readthedocs.io/en/latest/choosing_parameters.html
   opt_parameters: ""
   filter:
       noFilter: false
