atlas init public not completely tested

--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ test/*
 !test/dryrun.sh
 !test/test_assembly.sh
 !test/test_binning.sh
-!test/test_sra.py
+!test/test_sra.sh
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
