--- a/atlas/workflow/Snakefile
+++ b/atlas/workflow/Snakefile
@@ -4,6 +4,7 @@ import sys
 import tempfile
 import pandas as pd
 import numpy as np
+from pathlib2 import Path
 
 from snakemake.utils import logger, min_version
 
