--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,8 @@ wheels/
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
+databases
+test/*
 .test/*
 !.test/dryrun.sh
 !.test/test_assembly.sh
