--- a/.gitignore
+++ b/.gitignore
@@ -25,15 +25,21 @@ wheels/
 .installed.cfg
 *.egg
 .snakemake/
+
+# atlas specific
+databases
+
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 .test/*
-!.test/dryrun.sh
-!.test/test_assembly.sh
-!.test/test_binning.sh
+test/*
+!test/dryrun.sh
+!test/test_assembly.sh
+!test/test_binning.sh
+!test/test_sra.sh
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
@@ -91,6 +97,8 @@ ENV/
 
 # Rope project settings
 .ropeproject
+
+
 
 # on mac
 .DS_Store
