--- a/atlasenv.yml
+++ b/atlasenv.yml
@@ -3,15 +3,15 @@ channels:
   - bioconda
   - defaults
 dependencies:
-  - python>=3.8
+  - python>=3.10
   - mamba
   - bbmap=38
-  - snakemake-minimal=6.7
+  - snakemake-minimal=6.15
   - pygments
   - networkx
   - graphviz
-  - pandas=1.2
-  - click=7
-  - ruamel.yaml=0.17
-  - biopython=1.74
+  - pandas>=1.2
+  - click>=7
+  - ruamel.yaml>=0.17
+  - biopython>=1.74
   - cookiecutter
