Add strain profiling using inStrain (#492)
* instrain initial commit

* concat genes for instrain

* add input arg

* ignore databases folder

* Try to make genome_dir modifiable, without success

* add test for quantify genomes

* alternative way to get to contigs2genomes for quantification with external genomes

* changed place for rename_genomes.py

* formating

* circle ci test quantification

* ignore genes for the moment

* instrain takes long

--- a/.gitignore
+++ b/.gitignore
@@ -34,12 +34,15 @@ databases
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
+databases
+test/*
 .test/*
 test/*
 !test/dryrun.sh
 !test/test_assembly.sh
 !test/test_binning.sh
 !test/test_sra.sh
+!test/test_external_genomes.sh
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
