--- a/atlas/workflow/Snakefile
+++ b/atlas/workflow/Snakefile
@@ -225,6 +225,7 @@ include: "rules/sra.smk"
 include: "rules/gtdbtk.smk"
 include: "rules/cobinning.smk"
 include: "rules/dram.smk"
+include: "rules/strains.smk"
 
 
 CONDAENV = "envs"  # overwrite definition in download.smk
@@ -297,9 +298,17 @@ rule genomes:
         "genomes/counts/raw_counts_genomes.tsv",
         "genomes/clustering/allbins2genome.tsv",
         * get_genome_annotations(),
+        rules.strains.input,
         "finished_binning",
     output:
         temp(touch("finished_genomes")),
+
+
+rule quantify_genomes:
+    input:
+        "genomes/counts/median_coverage_genomes.tsv",
+        "genomes/counts/raw_counts_genomes.tsv",
+        rules.strains.input,
 
 
 rule binning:
