--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -24,12 +24,15 @@ large_mem: 250
 large_threads: 8
 assembly_threads: 8
 assembly_memory: 250
+simplejob_mem: 10
+simplejob_threads: 4
 
 #Runtime only for cluster execution
 runtime: #in h
     default: 5
     assembly: 48
     long: 24
+    simplejob: 1
 
 # Local directory for temp files, useful for cluster execution without shared file system
 tmpdir: /tmp
