--- a/atlasenv.yml
+++ b/atlasenv.yml
@@ -11,6 +11,7 @@ dependencies:
   - networkx
   - graphviz
   - pandas >=1.2, <1.5
+  - pyarrow # for parquet reading
   - click >=7
   - ruamel.yaml >=0.17
   - biopython >= 1.74
