--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -213,7 +213,7 @@ annotations:
 genecatalog:
   source: contigs               # [contigs, genomes] Predict genes from all contigs or only from the representative genomes
   clustermethod: linclust       # [cd-hit-est or mmseqs or linclust] see mmseqs for more details
-  minlength_nt: 100
+  minlength_nt: 100             # min length 
   minid: 0.95                   # min id for gene clustering for the main gene catalog used for annotation
   coverage: 0.9
   extra: ""
