define default config file with gnee annotatons

--- a/atlas/template_config.yaml
+++ b/atlas/template_config.yaml
@@ -207,6 +207,9 @@ annotations:
 #  - checkm_taxonomy
 #  - checkm_tree
 
+gene_annotations:
+  - eggNOG
+
 ########################
 # Gene catalog
 #######################
