--- a/atlas/workflow/Snakefile
+++ b/atlas/workflow/Snakefile
@@ -8,13 +8,18 @@ from pathlib2 import Path
 
 from snakemake.utils import logger, min_version
 
-sys.path.append(
-    os.path.join(os.path.dirname(os.path.abspath(workflow.snakefile)), "scripts")
-)
+workflow_folder= os.path.dirname(os.path.abspath(workflow.snakefile))
+
+sys.path.append( os.path.join(workflow_folder, "scripts"))
 import utils
 
 from atlas.make_config import update_config
 
+# add default config
+# comand line adds user config
+configfile: os.path.join(workflow_folder,"config","default_config.yaml")
+
+# add defualt values from python (TODO: replace this)
 config = update_config(config)
 from atlas.default_values import *  # LOAD HARDCODED values and EGGNOG_HEADER
 from atlas.sample_table import load_sample_table
@@ -249,14 +254,43 @@ rule all:
         "genomes/annotations/gene2genome.tsv.gz",
 
 
+
+def get_gene_catalog_input():
+
+
+
+    annotation_file_names = {
+
+        "eggNOG":  "Genecatalog/annotations/eggNog.tsv.gz",
+        "single_copy": expand("Genecatalog/annotation/single_copy_genes_{domain}.tsv",domain=['bacteria','archaea'])
+    }
+
+    annotations_requested = config.get("gene_annotations",[])
+
+    try:
+        annotations_files = [ "Genecatalog/counts/median_coverage.parquet"] + [
+            annotation_file_names[key] for key in annotations_requested
+        ]
+
+    except Exception as e:
+
+        raise IOError(
+            "Error in gene_annotations requested, check config file 'gene_annotations' "
+        ) from e
+
+    return annotations_files
+
+
+
 rule genecatalog:
     input:
         "Genecatalog/gene_catalog.fna",
         "Genecatalog/gene_catalog.faa",
         "Genecatalog/clustering/orf2gene.tsv.gz",
-        "Genecatalog/counts/median_coverage.parquet",
-        # expand("Genecatalog/annotation/single_copy_genes_{domain}.tsv",domain=['bacteria','archaea']),
-        "Genecatalog/annotations/eggNog.tsv.gz",
+        get_gene_catalog_input()
+       
+        # ,
+       
     output:
         temp(touch("finished_genecatalog")),
 
