--- a/atlas/workflow/Snakefile
+++ b/atlas/workflow/Snakefile
@@ -13,14 +13,14 @@ workflow_folder= os.path.dirname(os.path.abspath(workflow.snakefile))
 sys.path.append( os.path.join(workflow_folder, "scripts"))
 import utils
 
-from atlas.make_config import update_config
 
 # add default config
 # comand line adds user config
 configfile: os.path.join(workflow_folder,"config","default_config.yaml")
 
 # add defualt values from python (TODO: replace this)
-config = update_config(config)
+from atlas.make_config import update_config as atlas_update_config
+config = atlas_update_config(config)
 from atlas.default_values import *  # LOAD HARDCODED values and EGGNOG_HEADER
 from atlas.sample_table import load_sample_table
 
