use bbsplit for genome quantification

--- a/atlas/workflow/Snakefile
+++ b/atlas/workflow/Snakefile
@@ -326,9 +326,10 @@ def get_genome_annotations():
 rule genomes:
     input:
         "genomes/Dereplication/dereplicated_genomes",
-        "genomes/counts/median_coverage_genomes.tsv",
-        "genomes/counts/raw_counts_genomes.tsv",
+        "genomes/counts/median_coverage_genomes.parquet"
+        expand("genomes/counts/combined_coverage_{scope}.parquet", scope=["scaf", "ref"]),
         "genomes/clustering/allbins2genome.tsv",
+        "genomes/counts/mapping_rate.tsv",
         *get_genome_annotations(),
         "finished_binning",
     output:
